--- a/frontend/src/components/Spots/CreateSpotModal.css
+++ b/frontend/src/components/Spots/CreateSpotModal.css
@@ -1,7 +1,14 @@
 .create-spot-wrapper {
     margin: auto;
-    width: 380px;
+    width: 96%;
     padding: 20px;
+}
+
+#create-spot-inner-div {
+    height: 800px;
+    width: 90%;
+    margin: auto;
+    overflow-y: auto;
 }
 
 #where-p {
