--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,6 +51,7 @@ body {
     box-shadow: 0px 0px 4px 2px rgb(77, 77, 77);
     border: 2px solid rgb(87, 87, 87);
     background-color: rgb(230, 230, 230);
+    outline: none;
 }
 
 
