--- a/frontend/src/components/Spots/CreateSpotModal.css
+++ b/frontend/src/components/Spots/CreateSpotModal.css
@@ -85,21 +85,85 @@
 }
 
 #images-div {
-    width: 80%;
+    width: 100%;
     margin-top: 20px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.images-inner-div {
+    position: relative;
+    width: 150px;
 }
 
 .imageUrl-input {
     margin-bottom: 10px;
 }
 
+.create-post-image {
+    width: 100%;
+    height: 150px;
+    border: 2px solid black;
+    border-radius: 15px;
+}
+
+.create-post-image-input {
+    width: 100%;
+    height: 150px;
+    margin: auto;
+    text-indent: 16px;
+    background-color: rgb(136, 136, 136);
+    border: 2px dashed rgb(39, 39, 39);
+    border-radius: 15px;
+    font-weight: 700;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.create-post-remove-image-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: red;
+    height: 25px;
+    width: 25px;
+    border-radius: 30px;
+    font-weight: 700;
+    font-size: 16px;
+    padding-top: 3px;
+    padding-left: 5.4px;
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+.create-post-remove-image-button:hover {
+    opacity: 1.0;
+}
+
+.create-spot-image-add {
+    font-size: 55px;
+    margin-left: 30px;
+    color: rgb(180, 180, 180);
+    cursor: pointer;
+}
+
+.create-spot-image-add:hover {
+    color: rgb(0, 0, 0);
+}
+
 #create-spot-button-div {
     display: flex;
     justify-content: space-between;
-    width: 80%;
+    width: 90%;
     margin-top: 10px;
     padding-bottom: 20px;
     gap: 10px;
+}
+
+
+
+
+::file-selector-button {
+    display: none;
 }
