--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -3,25 +3,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    width: 100vw;
-    max-width: 1300px;
     align-items: center;
-    background-color: rgb(241, 241, 241);
+    max-width: 1500px;
     gap: 10px;
     padding-top: 40px;
     padding-left: 80px;
     margin: auto;
 }
 
-.spot-div {
-    flex-basis: 24%;
-    height: 350px;
-}
-
 .spotLink {
-    flex-basis: 24%;
-    max-width: 300px;
-    height: 350px;
+    width: 100%;
+    height: 380px;
     text-decoration: none;
     color: rgb(119, 119, 119);
     background-color: rgb(255, 255, 255);
@@ -37,7 +29,7 @@
 }
 
 .allSpots-img {
-    width: 300px;
+    width: 100%;
     height: 280px;
     border-radius: 15px;
     object-fit: cover;
@@ -48,15 +40,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: -10px;
-    width: 300px;
+    width: 100%;
 }
 
 .allSpots-price-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
     margin-top: -20px;
-    width: 300px;
     font-weight: 500;
 }
 
@@ -86,4 +78,34 @@
 }
 .allSpots-delete-button:hover {
     color: red;
+}
+
+@media (max-width: 799px) {
+    #allSpots-wrapper {
+        flex-direction: column;
+        padding-left: 0px;
+    }
+    
+    .spotLink {
+        margin: auto;
+        width: 90%;
+    }
+}
+
+@media (min-width: 800px) {
+    .spotLink {
+        width: 43%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .spotLink {
+        width: 30%
+    }
+}
+
+@media (min-width: 1600px) {
+    .spotLink {
+        width: 23%
+    }
 }
