--- a/frontend/src/components/Spots/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot.css
@@ -70,6 +70,7 @@
 .singleSpots-edit-button {
     border: none;
     background: none;
+    cursor: pointer;
 }
 .singleSpot-edit-square {
     font-size: 24px;
@@ -83,6 +84,7 @@
     margin-right: 20px;
     background: none;
     border: none;
+    cursor: pointer;
 }
 .singleSpot-delete-trash {
     font-size: 22px;
