--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,8 +9,8 @@
     align-items: center;
     width: 100%;
     padding: 5px;
-    background-color: white;
-    border: 1px solid rgb(177, 177, 177);
+    background-color: rgb(253, 253, 253);
+    box-shadow: 0px 1px 2px 1px rgb(233, 233, 233);
 }
 
 .logoImg {
