--- a/frontend/src/components/Spots/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot.css
@@ -144,6 +144,7 @@
 }
 
 #singleSpot-booking-guests {
+    position: relative;
     margin-left: 10px;
     height: 60px;
     border: 1px solid rgb(160, 160, 160);
@@ -153,8 +154,68 @@
     cursor: pointer;
 }
 
+#singleSpot-booking-guests-top {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    pointer-events: inherit;
+}
+
+#singleSpot-guests-dropdown {
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    height: 300px;
+    border: 1px solid rgb(221, 221, 221);
+    background-color: white;
+    box-shadow: 0px 0px 2px 3px rgb(238, 238, 238);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    pointer-events: none;
+    gap: 5px;
+}
+
+.singleSpot-guests-dropdown-type {
+    display: flex;
+    align-items: center;
+    width: 95%;
+    margin-top: 10px;
+    margin-bottom: -25px;
+}
+
+.singleSpot-guests-dropdown-type-left {
+    flex: 50%;
+}
+
+.singleSpot-guests-dropdown-type-right {
+    flex: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 2px;
+}
+
+.singleSpot-guest-arrow {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.add-sub-button {
+    font-size: 30px;
+    pointer-events: initial;
+    cursor: pointer;
+}
+
 .singleSpot-small-p {
     font-size: 10px;
+}
+.singleSpot-medium-p {
+    font-size: 15px;
+}
+.singleSpot-guests-p {
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .singleSpot-date-string {
@@ -162,7 +223,11 @@
     font-weight: 500;
     font-size: 14px;
 }
-
+.singleSpot-guest-string {
+    margin-top: -15px;
+    font-weight: 500;
+    font-size: 14px;
+}
 
 
 #singleSpot-reviews-container {
