--- a/frontend/src/components/Spots/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot/SingleSpot.css
@@ -22,12 +22,6 @@
     font-weight: 500;
 }
 
-#singleSpot-previewImg-only {
-    width: 100%;
-    height: 500px;
-    border-radius: 15px;
-}
-
 #singleSpot-middle-container {
     display: flex;
 }
@@ -158,7 +152,6 @@
     display: flex;
     justify-content: space-between;
     width: 95%;
-    pointer-events: inherit;
 }
 
 #singleSpot-guests-dropdown {
@@ -172,7 +165,7 @@
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    pointer-events: none;
+    cursor: default;
     gap: 5px;
 }
 
@@ -251,6 +244,7 @@
     background: white;
     box-shadow: 0px 0px 4px 2px rgb(139, 139, 139);
     line-height: 1.125em;
+    z-index: 1;
 }
 
 .react-calendar--hidden {
