--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,29 +12,26 @@ body {
 
 /* Button */
 .main-button-style {
-    background: linear-gradient(#b3b3b3, #f5f5f5);
-    border: 1px solid rgb(180, 180, 180);
-    box-shadow: 1px 1px 2px 2px rgb(160, 160, 160);
-    border-radius: 3px;
+    background: linear-gradient(rgb(0, 240, 0), rgb(0, 175, 15));
+    box-shadow: 0px 1px 4px 3px rgb(204, 204, 204);
+    border: none;
+    border-radius: 10px;
     cursor: pointer;
 }
 
 .main-button-style:hover {
-    background: linear-gradient(#c9c9c9, #ffffff);
-    border: 1px solid rgb(212, 212, 212);
-    box-shadow: 1px 1px 2px 2px rgb(207, 207, 207);
+    background: linear-gradient(rgb(0, 255, 0), rgb(0, 184, 15));
+    box-shadow: 0px 1px 4px 3px rgb(180, 180, 180);
 }
 
 .main-button-style:active {
-    background: linear-gradient(#a7a7a7, #d3d3d3);
-    border: 1px solid rgb(212, 212, 212);
-    box-shadow: 1px 1px 2px 2px rgb(226, 226, 226);
+    background: linear-gradient(rgb(0, 223, 0), rgb(0, 155, 13));
+    box-shadow: 0px 1px 4px 3px rgb(223, 223, 223);
 }
 
 .main-button-style:disabled {
-    background: linear-gradient(#a7a7a7, #d3d3d3);
-    border: 1px solid rgb(168, 168, 168);
-    box-shadow: 1px 1px 2px 2px rgb(133, 133, 133);
+    background: linear-gradient(rgb(0, 211, 0), rgb(0, 126, 10));
+    box-shadow: 0px 1px 4px 3px rgb(223, 223, 223);
     cursor: not-allowed;
 }
 
