--- a/frontend/src/components/Spots/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot/SingleSpot.css
@@ -78,6 +78,9 @@
     padding-bottom: 20px;
     border-bottom: 1px solid grey;
 }
+#singleSpot-middle-about-div > p + p {
+    font-weight: 500;
+}
 
 
 
