--- a/frontend/src/components/Spots/SingleSpot/SingleSpot.css
+++ b/frontend/src/components/Spots/SingleSpot/SingleSpot.css
@@ -48,8 +48,8 @@
 }
 
 #singleSpot-anemities-title-img {
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     border-radius: 25px;
     margin-top: 30px;
 }
@@ -59,6 +59,7 @@
     flex-wrap: wrap;
     align-items: center;
     gap: 5px;
+    margin-top: 10px;
     width: 100%;
     border-radius: 5px;
 }
