--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -39,16 +39,17 @@
 }
 
 .create-spot {
-    text-decoration: none;
-    text-align: center;
-    color: black;
-    font-size: 14px;
-    margin-right: 20px;
-    background-color: white;
-    height: 28px;
+    height: 25px;
     width: 180px;
     border: none;
     border-radius: 30px;
+    text-decoration: none;
+    color: black;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 2px;
+    padding-top: 8px;
+    margin-right: 10px;
     cursor: pointer;
 }
 
