--- a/frontend/src/components/Spots/CreateSpot/CreateSpotModal.css
+++ b/frontend/src/components/Spots/CreateSpot/CreateSpotModal.css
@@ -1,158 +1,41 @@
-.create-spot-wrapper {
+#create-spot-wrapper {
     width: 100vw;
+    height: auto;
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-#create-spot-inner-div {
-    height: 450px;
-    width: 80%;
-    margin: auto;
+#create-spot-nav {
+    width: 95%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#create-spot-h2 {
-    text-align: center;
+#create-spot-nav-div {
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
-#create-spot-h3 {
-    margin-top: 40px;
-}
-
-#where-p {
-    font-size: 13px;
-    margin-top: -14px;
-    margin-bottom: 20px;
-}
-
-.create-spot-button {
+.create-spot-setup-button {
+    height: 45px;
     width: 200px;
-    height: 25px;
+    font-size: 18px;
 }
 
-#create-spot-top {
-    width: 80%;
-    border-bottom: 2px solid black;
-}
 
-.create-spot-input-div {
-    display: flex;
-    flex-direction: column;
-    width: 65%;
-    margin-bottom: 5px;
-    padding-bottom: 10px;
-}
-
-.create-spot-input {
-    box-shadow: 0px 0px 2px 1px rgb(146, 146, 146);
-    border: 2px solid rgb(87, 87, 87);
-    background-color: rgb(230, 230, 230);
-}
-.create-spot-input2 {
-    width: 372px;
-    margin-bottom: 10px;
-}
-
-.desc-p {
-    font-size: 13px;
-    margin-top: -14px;
-}
-
-#create-spot-description-div {
-    width: 80%;
-}
-
-#desc-div {
-    border-bottom: 2px solid black;
-}
-
-#desc-textarea {
-    width: 100%;
-    height: 150px;
-    resize: none;
-    outline: none;
-    margin-bottom: 10px;
-    border: 2px solid black;
-    box-shadow: 0px 0px 4px 1px rgb(102, 102, 102);
-}
-
-.input-div {
-    width: 80%;
-    border-bottom: 2px solid black;
-}
-
-#price-input {
-    margin-top: 20px;
-    width: 358px;
-    margin-bottom: 10px;
-}
-
-#amenity-input {
-    margin-top: 20px;
-    width: 320px;
-    margin-bottom: 10px;
-}
-
-.createSpot-margin-p {
-    margin-bottom: 0px;
-}
-.createSpot-margin-p > span {
-    font-size: 12px;
-}
-.createSpot-margin-p-small {
-    font-size: 12px;
-    margin-bottom: 0px;
-}
-
-#createSpot-amenities-div {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 10px;
-    gap: 2px;
-}
-
-.createSpot-amenity-div {
-    flex: 23%;
-    width: auto;
-    max-width: 150px;
-    height: 25px;
-    border: 1px solid rgb(179, 179, 179);
-    border-radius: 10px;
-}
-
-.createSpot-amenity-p {
+#create-spot-earnings-div {
+    width: 95%;
+    height: 400px;
     margin: auto;
+    margin-top: 100px;
     text-align: center;
-    margin-top: 5px;
-    color: rgb(94, 94, 94);
-}
-
-#createSpot-add-amenity-button {
-    margin-left: 10px;
-}
-
-#createSpot-remove-amenity-button {
-    margin-left: 5px;
-    background: linear-gradient(rgb(240, 0, 0), rgb(175, 0, 0));
 }
 
 
-#images-div {
-    width: 100%;
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
 
-.images-inner-div {
-    position: relative;
-    width: 150px;
-}
-
-.imageUrl-input {
-    margin-bottom: 10px;
-}
 
 .create-post-image {
     width: 100%;
@@ -203,15 +86,6 @@
 
 .create-spot-image-add:hover {
     color: rgb(0, 0, 0);
-}
-
-#create-spot-button-div {
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin-top: 10px;
-    padding-bottom: 20px;
-    gap: 10px;
 }
 
 
