--- a/frontend/src/components/Spots/CreateSpot/CreateSpotModal.css
+++ b/frontend/src/components/Spots/CreateSpot/CreateSpotModal.css
@@ -1,5 +1,7 @@
 #create-spot-wrapper {
     width: 100vw;
+    max-width: 1200px;
+    margin: auto;
     height: auto;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -8,6 +10,7 @@
 #create-spot-nav {
     width: 95%;
     height: 60px;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -34,6 +37,40 @@
     text-align: center;
 }
 
+#create-spot-gmaps-div {
+    width: 95%;
+    height: 500px;
+    margin: auto;
+}
+
+#create-spot-type-div {
+    width: 100%;
+    height: 60px;
+    border: 1px solid grey;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.create-spot-type-p1 {
+    margin-left: 15px;
+    font-size: 15px;
+}
+.create-spot-type-p {
+    margin-left: 15px;
+    margin-top: -15px;
+    font-size: 14px;
+    font-weight: 500;
+    color: rgb(138, 138, 138);
+}
+
+
+.create-spot-magnifying-glass {
+    margin-left: 20px;
+    font-size: 14px;
+    color: rgb(0, 206, 0);
+}
 
 
 .create-post-image {
