--- a/frontend/src/components/Spots/CreateSpot/CreateSpotInfo.css
+++ b/frontend/src/components/Spots/CreateSpot/CreateSpotInfo.css
@@ -1,4 +1,4 @@
-#create-spot-wrapper {
+#cs-info-wrapper {
     width: 90vw;
     max-width: 1200px;
     margin: auto;
@@ -7,7 +7,7 @@
     padding-bottom: 20px;
 }
 
-#create-spot-nav {
+#cs-info-nav {
     width: 95%;
     height: 60px;
     margin: auto;
@@ -16,20 +16,20 @@
     align-items: center;
 }
 
-#create-spot-nav-div {
+#cs-info-nav-div {
     display: flex;
     align-items: center;
     gap: 20px;
 }
 
-.create-spot-setup-button {
+.cs-info-setup-button {
     height: 45px;
     width: 200px;
     font-size: 18px;
 }
 
 
-#create-spot-earnings-div {
+#cs-info-earnings-div {
     width: 100%;
     height: 400px;
     margin: auto;
@@ -37,13 +37,13 @@
     text-align: center;
 }
 
-#create-spot-gmaps-div {
+#cs-info-gmaps-div {
     width: 100%;
     height: 500px;
     margin: auto;
 }
 
-#create-spot-type-div {
+#cs-info-type-div {
     width: 100%;
     height: 60px;
     margin: auto;
@@ -54,7 +54,7 @@
     align-items: center;
 }
 
-#create-spot-info-text-div {
+#cs-info-text-div {
     width: 98%;
     display: flex;
     flex-direction: column;
@@ -79,11 +79,11 @@
 
 
 
-.create-spot-type-p1 {
+.cs-info-type-p1 {
     margin-left: 15px;
     font-size: 15px;
 }
-.create-spot-type-p {
+.cs-info-type-p {
     margin-left: 15px;
     margin-top: -15px;
     font-size: 14px;
@@ -92,67 +92,8 @@
 }
 
 
-.create-spot-magnifying-glass {
+.cs-info-magnifying-glass {
     margin-left: 20px;
     font-size: 14px;
     color: rgb(0, 206, 0);
-}
-
-
-.create-post-image {
-    width: 100%;
-    height: 150px;
-    border: 2px solid black;
-    border-radius: 15px;
-}
-
-.create-post-image-input {
-    width: 100%;
-    height: 150px;
-    margin: auto;
-    text-indent: 16px;
-    background-color: rgb(136, 136, 136);
-    border: 2px dashed rgb(39, 39, 39);
-    border-radius: 15px;
-    font-weight: 700;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-.create-post-remove-image-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: red;
-    height: 25px;
-    width: 25px;
-    border-radius: 30px;
-    font-weight: 700;
-    font-size: 16px;
-    padding-top: 3px;
-    padding-left: 5.4px;
-    opacity: 0.6;
-    cursor: pointer;
-}
-
-.create-post-remove-image-button:hover {
-    opacity: 1.0;
-}
-
-.create-spot-image-add {
-    font-size: 55px;
-    margin-left: 30px;
-    color: rgb(180, 180, 180);
-    cursor: pointer;
-}
-
-.create-spot-image-add:hover {
-    color: rgb(0, 0, 0);
-}
-
-
-
-
-::file-selector-button {
-    display: none;
 }
