--- a/frontend/src/components/Spots/CreateSpot/SpotType.css
+++ b/frontend/src/components/Spots/CreateSpot/SpotType.css
@@ -36,7 +36,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
 }
 
 .cs-type-items-item {
@@ -44,10 +44,22 @@
     height: 100px;
     border: 1px solid grey;
     border-radius: 10px;
-    transition: border 50ms, width 50ms, height 50ms;
+    cursor: pointer;
+    transition: box-shadow 200ms
 }
 .cs-type-items-item:hover {
-    border: 3px solid rgb(56, 56, 56);
-    width: 196px;
-    height: 96px;
+    border: 1px solid rgb(19, 19, 19);
+    box-shadow: 0px 0px 2px 1px rgb(19, 19, 19);
+}
+
+.cs-types-type-div {
+    margin-left: 10px;
+}
+
+.cs-types-type-p {
+    margin-top: 10px;
+}
+.cs-type-house {
+    font-size: 30px;
+    margin-top: 20px;
 }
