Add Create Spot Type Icons

--- a/frontend/src/components/Spots/CreateSpot/SpotType.css
+++ b/frontend/src/components/Spots/CreateSpot/SpotType.css
@@ -53,13 +53,13 @@
 }
 
 .cs-types-type-div {
-    margin-left: 10px;
+    margin-left: 15px;
 }
 
 .cs-types-type-p {
     margin-top: 10px;
 }
-.cs-type-house {
+.cs-type-icon {
     font-size: 30px;
     margin-top: 20px;
 }
