--- a/frontend/src/components/Spots/CreateSpot/SpotType.css
+++ b/frontend/src/components/Spots/CreateSpot/SpotType.css
@@ -1,6 +1,6 @@
 #cs-type-wrapper {
-    width: 95vw;
-    max-width: 95vw;
+    width: 100vw;
+    max-width: 100vw;
     margin: auto;
     height: auto;
     padding-top: 20px;
@@ -10,6 +10,8 @@
 #cs-type-nav {
     height: 60px;
     margin: auto;
+    margin-left: 20px;
+    margin-right: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -62,4 +64,12 @@
 .cs-type-icon {
     font-size: 30px;
     margin-top: 20px;
+}
+
+#cs-type-footer {
+    width: 100vw;
+    height: 80px;
+    position: absolute;
+    margin: auto;
+    bottom: 0px;
 }
