--- a/frontend/src/components/Spots/CreateSpot/SpotType.css
+++ b/frontend/src/components/Spots/CreateSpot/SpotType.css
@@ -31,6 +31,7 @@
 
 #cs-type-center-div {
     width: 650px;
+    height: 82vh;
     margin: auto;
 }
 
@@ -81,8 +82,6 @@
 }
 
 #cs-footer {
-    position: fixed;
-    bottom: 50px;
     width: 100vw;
     height: 60px;
     margin-top: 100px;
