--- a/frontend/src/components/Spots/SpotComponent.css
+++ b/frontend/src/components/Spots/SpotComponent.css
@@ -1,12 +1,12 @@
 .spotLink {
     width: 100%;
     height: 380px;
-    text-decoration: none;
     color: rgb(119, 119, 119);
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 1px 1px rgb(185, 185, 185);
     border-radius: 20px;
     transition: position 800ms;
+    cursor: pointer;
 }
 
 .spotLink:hover {
