--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -8,7 +8,6 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    max-width: 1500px;
     gap: 10px;
     padding-top: 40px;
     padding-left: 80px;
@@ -45,21 +44,43 @@
 
 #spottypes-wrapper {
     width: 100%;
-    height: 50px;
-    background-color: red;
+    height: 60px;
+    margin-top: 25px;
     display: flex;
 }
 
 #spottypes-types {
-    width: 75%;
-    background-color: black;
+    width: 70%;
+    margin-left: 70px;
+    display: flex;
+    gap: 20px;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #spottypes-filters {
-    width: 25%;
-    background-color: yellow;
+    width: 30%;
 }
 
+.spottypes-types-element {
+    height: 50px;
+    min-width: 85px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2px;
+}
+.spottypes-types-element > img {
+
+}
+.spottypes-types-element > p {
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(63, 63, 63);
+    margin-top: -5px;
+}
 
 
 @media (max-width: 799px) {
