--- a/frontend/src/components/Spots/CreateSpot/SpotType.css
+++ b/frontend/src/components/Spots/CreateSpot/SpotType.css
@@ -69,6 +69,10 @@
     box-shadow: 0px 0px 2px 1px rgb(19, 19, 19);
 }
 
+#cs-space-type-container {
+    position: relative;
+}
+
 .cs-types-type-div {
     margin-left: 15px;
 }
@@ -82,6 +86,8 @@
 }
 
 #cs-footer {
+    position: fixed;
+    bottom: 10px;
     width: 100vw;
     height: 60px;
     margin-top: 100px;
@@ -94,9 +100,8 @@
 #cs-footer-button-div {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    width: 95%;
     margin-left: 20px;
-    margin-right: 20px;
 }
 
 #cs-footer-back-button {
